Fixed horizontal scrollbar issues and updated homepage text

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -6,6 +6,7 @@
     left: 0;
     min-height: 100vh;
     width: 100vw;
+    overflow-x: hidden!important;
 }
 
 .description-container {
