--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -5,6 +5,7 @@
     min-height: 100vh;
     width: 100vw;
     background-color: black;
+    overflow-x: hidden!important;
 }
 
 .wrapper {
